1.1.4 to 1.1.5
----------------------------------------------------------------------
- Deprecated many of the "standard" events that are no longer needed.
- Added a new UEI named MATCH-ANY-UEI. When used in a notification
  rule, it will return "true" for any UEI. Useful for getting
  notifications on all events to a single devices or group of
  devices.
- Added definitions for MGE UPS traps.
- Added definitions for Network Appliance traps.
- Removed the need for an ifIndex for SNMP data collection. Once the
  service is discovered, a rescan may be necessary. Thx Bill.
- Added a fix for notifications with an IP address of 0.0.0.0. 
  Bug 1016. Thx Bill.
- Added a null pointer fix for categories. Bug 1015. Thx Bill.
- Added an event for Snort traps. Thx Deven
- Added Netbotz events.
- Added a bunch more event definitions. Thx Mike and Jonathan
- Added new Compaq event definitions. Thx Mike
- Added a number of new graphs for Net-SNMP collections.
  Thx Robert and Ray.
- Totally reworked and reordered datacollection-config.xml and
  snmp-graph.properties to make them easier to manage.
- Removed mib2-interfaces from SystemDefs to prevent double-polling.
- Added the event UEI to the event detail.
- Added a test for the Dell OpenManage service, and if available,
  an OpenManage link will appear on the webUI node page.
- Removed the cisco.pixcpu report as a duplicate of avgBsy5. Thx Alex
  Bug 925.
- Made the Netware mask more generic. Thx Wes. Bug 880
- Corrected the text for send-event.pl. Thx John. Bug 819
- Added a patch to prevent issues with Cisco Routers and CEF enabled.
  Thx Siddhartha. Bug 803.
- Added a fix to address an issue when editing destination paths.
  Thx Craig. Bug 920

1.1.3 to 1.1.4
----------------------------------------------------------------------
- Updated the release notes and install guide.
- Lots of performance enhancements for collectd
- Added a Java based mailer to remove the need for /bin/mail and
  perl.