@@ -1,5 +1,6 @@
 1.1.4 to 1.1.5
 ----------------------------------------------------------------------
+- Added a check for improperly formatted v2 traps.
 - Deprecated many of the "standard" events that are no longer needed.
 - Added a new UEI named MATCH-ANY-UEI. When used in a notification
   rule, it will return "true" for any UEI. Useful for getting
